Supplement video material

--- a/Feature Engineering/FeatureEncoding.ipynb
+++ b/Feature Engineering/FeatureEncoding.ipynb
@@ -43,7 +43,6 @@
    "cell_type": "markdown",
    "id": "5b54c9ac-ebe2-41e0-b521-843cc490bcc8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -240,7 +239,6 @@
    "cell_type": "markdown",
    "id": "6f5e5957-a248-4dd2-892a-5d0e6bc22892",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -317,7 +315,6 @@
    "cell_type": "markdown",
    "id": "c9a64f83-d360-4204-8dae-5d6aef38b5fd",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -731,6 +728,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47da5233-3476-4b9e-a6ad-5fe3eee2a361",
+   "metadata": {},
+   "source": [
+    "[One-Hot, Label, Target and K-Fold Target Encoding, Clearly Explained!!!](https://youtu.be/589nCGeWG1w?si=4IQlGwW1bhJBhkiz)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "972f4fa2-2049-4f18-a6dd-1f9e6f28badd",
    "metadata": {},
    "source": [
@@ -920,7 +925,6 @@
    "cell_type": "markdown",
    "id": "cf800c54-4b7f-4d3c-8a48-ad735a48999a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -946,7 +950,6 @@
    "cell_type": "markdown",
    "id": "8d1faafd-a165-47e2-b487-537ffb8e1a1c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2120,7 +2123,6 @@
    "cell_type": "markdown",
    "id": "59af2d8a-d4dc-4a10-be00-b742979e00e1",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2474,7 +2476,6 @@
    "cell_type": "markdown",
    "id": "0778de10-83e6-470e-9716-6369dfd70f59",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2686,7 +2687,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
