--- a/Evaluation Metrics And Model Tuning/ModelTuning.ipynb
+++ b/Evaluation Metrics And Model Tuning/ModelTuning.ipynb
@@ -216,6 +216,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "aaf9d72a-38b0-4e77-966e-2964e1b80203",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_score(model, X_train, X_test, y_train, y_test):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    return model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ff48e9e8-c48b-4617-ae89-0eed1687e474",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "scores_logistic = []\n",
+    "scores_svm = []\n",
+    "scores_rf = []\n",
+    "\n",
+    "for train_index, test_index in kf.split(digits.data,digits.target):\n",
+    "    X_train, X_test, y_train, y_test = digits.data[train_index], digits.data[test_index], \\\n",
+    "                                       digits.target[train_index], digits.target[test_index]\n",
+    "    scores_logistic.append(get_score(LogisticRegression(solver='liblinear',multi_class='ovr'), X_train, X_test, y_train, y_test))  \n",
+    "    scores_svm.append(get_score(SVC(gamma='auto'), X_train, X_test, y_train, y_test))\n",
+    "    scores_rf.append(get_score(RandomForestClassifier(n_estimators=40), X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c77b3ea0-5baf-4881-b198-6963564fb498",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.953307392996109,\n",
+       " 0.9610894941634242,\n",
+       " 0.9649805447470817,\n",
+       " 0.9494163424124513,\n",
+       " 0.9649805447470817,\n",
+       " 0.96875,\n",
+       " 0.95703125]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_logistic"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2a66c6a4-8aac-423c-b4ab-a8f5b0170938",
    "metadata": {},
@@ -259,9 +323,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "109152f0-07af-4ea0-8bec-a946d5349821",
+   "metadata": {},
+   "source": [
+    "**Leave One Out Cross Validation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "79199029-bb76-49c0-8977-054cacee6873",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import LeaveOneOut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a0f4a693-a30a-4d0a-960e-bd2b12ac992d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "loo = LeaveOneOut()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3bb4baf1-556a-4cb1-846f-e22bd12c3ab8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9] [0]\n",
+      "[0 2 3 4 5 6 7 8 9] [1]\n",
+      "[0 1 3 4 5 6 7 8 9] [2]\n",
+      "[0 1 2 4 5 6 7 8 9] [3]\n",
+      "[0 1 2 3 5 6 7 8 9] [4]\n",
+      "[0 1 2 3 4 6 7 8 9] [5]\n",
+      "[0 1 2 3 4 5 7 8 9] [6]\n",
+      "[0 1 2 3 4 5 6 8 9] [7]\n",
+      "[0 1 2 3 4 5 6 7 9] [8]\n",
+      "[0 1 2 3 4 5 6 7 8] [9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for train_index, test_index in loo.split(np.random.randint(-50,150,10)):\n",
+    "    print(train_index, test_index)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72ad1c1-cfbc-483e-9d6b-4093ab923779",
+   "id": "03a23faa-a9f4-4856-a44c-c73b4cab85a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "scores_logistic = []\n",
+    "scores_svm = []\n",
+    "scores_rf = []\n",
+    "\n",
+    "for train_index, test_index in loo.split(digits.data,digits.target):\n",
+    "    X_train, X_test, y_train, y_test = digits.data[train_index], digits.data[test_index], \\\n",
+    "                                       digits.target[train_index], digits.target[test_index]\n",
+    "    scores_logistic.append(get_score(LogisticRegression(solver='liblinear',multi_class='ovr'), X_train, X_test, y_train, y_test))  \n",
+    "    scores_svm.append(get_score(SVC(gamma='auto'), X_train, X_test, y_train, y_test))\n",
+    "    scores_rf.append(get_score(RandomForestClassifier(n_estimators=40), X_train, X_test, y_train, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852e3674-3899-463c-8531-8a902ec7368f",
    "metadata": {},
    "outputs": [],
    "source": []
