Add links and updated material

--- a/Machine Learning Algorithms/KNearestNeighbours.ipynb
+++ b/Machine Learning Algorithms/KNearestNeighbours.ipynb
@@ -17,11 +17,15 @@
   {
    "cell_type": "markdown",
    "id": "473a1617-a1a6-4a41-837c-f4027e345ae3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# K Nearest Neighbours\n",
     "\n",
-    "It is a simple and intuitive machine learning algorithm used for both classification and regression tasks. It makes predictions based on the majority class (for classification) or the average value (for regression) of the k-nearest data points in the feature space. The *k* in KNN represents the number of nearest neighbors to consider, and predictions are made based on the labels or values of these neighbors."
+    "It is a simple and intuitive machine learning algorithm used for both classification and regression tasks. It makes predictions based on the majority class (for classification) or the average value (for regression) of the k-nearest data points in the feature space. The *k* in KNN represents the number of nearest neighbors to consider, and predictions are made based on the labels or values of these neighbors.\n",
+    "\n",
+    "[StatQuest: K-nearest neighbors, Clearly Explained](https://youtu.be/HVXime0nQeI?si=7lxurXSWOxKCi5aZ)"
    ]
   },
   {
@@ -35,7 +39,10 @@
   {
    "cell_type": "markdown",
    "id": "78ea0cae-70cb-4a61-a099-d3af48ed4fe2",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
@@ -50,6 +57,14 @@
     "5. **Make Prediction**: For classification tasks, assign the label of the majority class among the *k* nearest neighbors to the query point. For regression tasks, predict the average of the target values of the *k* nearest neighbors.\n",
     "\n",
     "6. **Return Prediction**: Return the predicted class label (for classification) or numerical value (for regression) as the final prediction for the query point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b916d12d-95d7-4ad3-8945-fa7510fc75fe",
+   "metadata": {},
+   "source": [
+    "[KNN Classification & Regression in Python](https://youtu.be/0RwM2BaLNkE?si=0bCD8dk9_s8cBW0O)"
    ]
   },
   {
@@ -331,7 +346,10 @@
   {
    "cell_type": "markdown",
    "id": "2378a44f-4c5f-4925-a592-d30d73a5505d",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## Decision Boundary and Effect of *k*\n",
     "\n",
@@ -350,7 +368,9 @@
   {
    "cell_type": "markdown",
    "id": "8952e397-1594-450d-9715-b05c55314e2b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Plotting Decision Boundary\n",
     "\n",
@@ -467,9 +487,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d8487c4-06a4-409d-9fb2-d941fe09d642",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Flaws of K Nearest Neighbours\n",
+    "\n",
+    "- Doesn't work well on imbalanced datasets.\n",
+    "- Isn't robust to outliers.\n",
+    "- Isn't reliable in higher dimensions.\n",
+    "- Doesn't tell which feature is more important.\n",
+    "- Features are non-homogenous."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a682076-8307-412b-a2fd-28faadb14549",
+   "id": "3c42a96c-33ee-4027-8502-5d2a45d8eb25",
    "metadata": {},
    "outputs": [],
    "source": []
