--- a/Machine Learning Algorithms/Gradient Descent/GradientDescent.ipynb
+++ b/Machine Learning Algorithms/Gradient Descent/GradientDescent.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "Let there exist a model **M**, and its parameters denoted by **w**. The model is characterised by a cost function, **J(w)**. Then, we can say that;  \n",
     "\n",
-    "$$w := w - \\alpha \\cdot \\nabla J(w) \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\text{where } \\nabla J(w) = \\left( \\frac{\\partial J}{\\partial w_0}, \\frac{\\partial J}{\\partial w_1}, \\ldots, \\frac{\\partial J}{\\partial w_m} \\right)$$"
+    "$$W := W - \\alpha \\cdot \\nabla J(W) \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\text{Where } \\nabla J(W) = \\left( \\frac{\\partial J}{\\partial w_0}, \\frac{\\partial J}{\\partial w_1}, \\ldots, \\frac{\\partial J}{\\partial w_m} \\right)$$"
    ]
   },
   {
