--- a/Feature Engineering/FeatureScaling.ipynb
+++ b/Feature Engineering/FeatureScaling.ipynb
@@ -12,7 +12,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -217,7 +220,7 @@
     }
    ],
    "source": [
-    "link = 'https://gist.githubusercontent.com/tijptjik/9408623/raw/b237fa5848349a14a14e5d4107dc7897c21951f5/wine.csv'\n",
+    "link = 'https://raw.githubusercontent.com/daaanishhh002/MachineLearning/main/Datasets/wine.csv'\n",
     "df = pd.read_csv(link,usecols=[0,1,2])\n",
     "df.columns = ['Class Label','Alcohol','Malic Acid']\n",
     "\n",
@@ -785,7 +788,7 @@
     }
    ],
    "source": [
-    "link = 'https://raw.githubusercontent.com/shivang98/Social-Network-ads-Boost/master/Social_Network_Ads.csv'\n",
+    "link = 'https://raw.githubusercontent.com/daaanishhh002/MachineLearning/main/Datasets/salary.csv'\n",
     "df = pd.read_csv(link)\n",
     "\n",
     "df = df.iloc[:,-3:]\n",
