--- a/Feature Engineering/FeatureConstruction.ipynb
+++ b/Feature Engineering/FeatureConstruction.ipynb
@@ -12,7 +12,46 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf967c7d-b0ab-4e02-b940-d559925ec856",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Feature Engineering\n",
+    "\n",
+    "Feature Engineering refers to the process of using domain knowledge to **select and transform the most relevant variables** from raw data when creating a predictive model using machine learning or statistical modelling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec8c8de-cb1f-419d-afb1-438582c442a0",
+   "metadata": {},
+   "source": [
+    "![](https://miro.medium.com/v2/resize:fit:800/1*rlW3pyMHeARdp55UYcVN1Q.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f468997-2cf0-4325-a6bd-2e3b77777517",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Feature Engineering Techniques\n",
+    "\n",
+    "1. Feature Construction\n",
+    "2. Feature Selection\n",
+    "3. Feature Transformation\n",
+    "4. Feature Scaling\n",
+    "5. Feature Encoding"
    ]
   },
   {
