Update hierarchial clustering

--- a/Machine Learning Algorithms/Unsupervised Learning/HierarchialClustering.ipynb
+++ b/Machine Learning Algorithms/Unsupervised Learning/HierarchialClustering.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fd4624ce-69e8-4646-8357-d8618a40f834",
+   "metadata": {},
+   "source": [
+    "# Hierarchial Agglomerative Clustering\n",
+    "\n",
+    "Hierarchical agglomerative clustering is a method where data points are initially treated as individual clusters and then iteratively merged based on their similarity until all points belong to one cluster. This creates a hierarchy of clusters, allowing for exploration of relationships at different levels of granularity without needing to specify the number of clusters beforehand."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3c447f79-9edb-4109-9eef-2c396fa2f26d",
