Update hierarchial clustering

--- a/Machine Learning Algorithms/Unsupervised Learning/HierarchialClustering.ipynb
+++ b/Machine Learning Algorithms/Unsupervised Learning/HierarchialClustering.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eaa6711a-0ba7-440c-b065-76904148896b",
+   "metadata": {},
+   "source": [
+    "![](https://images.datacamp.com/image/upload/v1674149819/Dendrogram_of_Agglomerative_Clustering_Approach_4eba3586ec.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3c447f79-9edb-4109-9eef-2c396fa2f26d",
