Update voting ensemble methods

--- a/Machine Learning Algorithms/Supervised Learning/VotingEnsemble.ipynb
+++ b/Machine Learning Algorithms/Supervised Learning/VotingEnsemble.ipynb
@@ -595,32 +595,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
+   "id": "ed339e0a-6e1f-458a-bd9b-cec89f62e38b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "X = df.iloc[:,:-1]\n",
+    "y = df.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "id": "359da0f2-7b23-4915-a309-b34d2be53e4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression,SGDRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor"
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 128,
    "id": "396f9bee-840a-4609-b45e-75e7f43dfabe",
    "metadata": {},
    "outputs": [],
    "source": [
     "lnr = LinearRegression()\n",
-    "gdr = SGDRegressor()\n",
+    "knr = KNeighborsRegressor()\n",
     "dtr = DecisionTreeRegressor()\n",
     "\n",
-    "estimators = [('lnr',lnr),('gdr',gdr),('dtr',dtr)]"
+    "estimators = [('lnr',lnr),('knr',knr),('dtr',dtr)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "id": "0108ec07-6c55-446b-b67f-3e691cc50502",
    "metadata": {
     "tags": []
@@ -630,9 +644,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lnr 0.6\n",
-      "gdr 0.6\n",
-      "dtr 0.47\n"
+      "lnr 0.51\n",
+      "knr -0.14\n",
+      "dtr 0.23\n"
      ]
     }
    ],
@@ -644,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "id": "47597401-02d1-4c74-a018-d41ab1261c19",
    "metadata": {
     "tags": []
@@ -656,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "id": "aaf82056-0efd-4d9e-a8b1-892930b48182",
    "metadata": {
     "tags": []
@@ -666,7 +680,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.67\n"
+      "0.48\n"
      ]
     }
    ],
@@ -688,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 129,
    "id": "2cdbcc5e-d127-4a0b-b000-de261c8f92a8",
    "metadata": {
     "tags": []
@@ -698,12 +712,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.66\n"
+      "0.54\n"
      ]
     }
    ],
    "source": [
-    "vc_weight = VotingRegressor(estimators,weights=[10,10,10])\n",
+    "vc_weight = VotingRegressor(estimators,weights=[10,1,10])\n",
     "_ = cross_val_score(vc_weight,X,y,cv=10,scoring='r2')\n",
     "print(np.round(np.mean(_),2))"
    ]
@@ -718,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 124,
    "id": "3d31f760-908c-4028-bc82-87f3e22e726c",
    "metadata": {
     "tags": []
@@ -737,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "id": "fb42288d-9586-40a9-9497-540146ecc948",
    "metadata": {
     "tags": []
@@ -747,11 +761,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dtr1 0.65\n",
-      "dtr2 0.71\n",
-      "dtr3 0.65\n",
-      "dtr4 0.54\n",
-      "dtr5 0.52\n"
+      "dtr1 0.13\n",
+      "dtr2 0.36\n",
+      "dtr3 0.43\n",
+      "dtr4 0.47\n",
+      "dtr5 0.23\n"
      ]
     }
    ],
@@ -763,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 126,
    "id": "5596ddf2-e89b-498b-98de-fd93038d71d2",
    "metadata": {
     "tags": []
@@ -773,7 +787,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.69\n"
+      "0.5\n"
      ]
     }
    ],
