--- a/Feature Engineering/FeatureEncoding.ipynb
+++ b/Feature Engineering/FeatureEncoding.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "fa82363a-a8b1-42b8-af93-65d8eb7ab2ce",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -915,6 +918,216 @@
    "source": [
     "[Encoding High Cardinality Features](https://www.kaggle.com/general/16927)  \n",
     "[Feature Hashing](https://datasciencestunt.com/dealing-with-categorical-features-with-high-cardinality-feature-hashing/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51693a4e-d3da-4765-82bb-37aeb4ead932",
+   "metadata": {},
+   "source": [
+    "## Column Transformer\n",
+    "\n",
+    "Column Transformer is a powerful tool for applying different transformations to different columns of your dataset within a single pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c6f51a50-fc7d-4722-803c-69f089bb4061",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "214e7fcb-991c-4b65-9d88-eaab93a82dc6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>fever</th>\n",
+       "      <th>cough</th>\n",
+       "      <th>city</th>\n",
+       "      <th>has_covid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>49</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>83</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>71</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  gender  fever   cough     city has_covid\n",
+       "39   50  Female  103.0    Mild  Kolkata        No\n",
+       "38   49  Female  101.0    Mild    Delhi       Yes\n",
+       "53   83    Male   98.0    Mild    Delhi       Yes\n",
+       "56   71    Male    NaN  Strong  Kolkata        No\n",
+       "88    5  Female  100.0    Mild  Kolkata        No"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "link = 'https://raw.githubusercontent.com/daaanishhh002/MachineLearning/main/Datasets/covid.csv'\n",
+    "df = pd.read_csv(link)\n",
+    "\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "39886d8c-4f5e-4025-8084-42096eebb99a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test = train_test_split(df.iloc[:,:5],df.iloc[:,-1],test_size=0.3,random_state=2002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f530a6f6-d947-432a-bf44-ea2a4a57b332",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "trfr = ColumnTransformer(transformers=[\n",
+    "    ('tf1',SimpleImputer(),['fever']),\n",
+    "    ('tf2',OrdinalEncoder(categories=[['Mild','Strong']]),['cough']),\n",
+    "    ('tf3',OneHotEncoder(sparse_output=False,drop='first'),['gender','city']),\n",
+    "],remainder='passthrough')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ae04ea08-8489-4a68-a1a7-feec141ed785",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(70, 7)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trfr.fit_transform(X_train).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "297551e2-e2bd-4c13-9d6c-ca9417dfe30f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 7)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trfr.transform(X_test).shape"
    ]
   },
   {
@@ -2489,7 +2702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
